# logviewer

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.json  tsconfig.json  webpack.config.js
.github/workflows/: test.yml
src/: cli.rs  filters.rs  json.rs  lib.rs  process.rs  readers.rs  tests.rs  web.rs
ui/: api.ts  index.css  index.html  index.ts  query.ts  timeline.ts  viewer.ts
