[package]
name = "logviewer"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
serde_json = { version = "1.0", optional = true }

[features]
json = ["serde_json"]
