[package]
name = "logviewer"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
serde_json = { version = "1.0", optional = true }
tokio = { version = "0.2", optional = true }
warp = { version = "0.2", optional = true }

[features]
default = ["web"]
json = ["serde_json"]
web = ["json", "tokio", "warp"]

[[bin]]
name = "logviewer"
path = "src/web.rs"
required-features = ["web"]

[[bin]]
name = "cli"
path = "src/cli.rs"
required-features = ["json"]
