[package]
name = "logviewer"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33", optional = true }
regex = "1.0"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "0.2", optional = true }
warp = { version = "0.2", optional = true }

[features]
default = ["cli", "web"]
json = ["serde", "serde_derive", "serde_json"]
cli = ["json", "clap"]
web = ["json", "tokio", "warp"]

[[bin]]
name = "logviewer"
path = "src/cli.rs"
required-features = ["cli", "json"]
